<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Keeper</string>
    <string name="report_currency">Currency for Reports</string>
    <string name="action_settings">Settings</string>
    <string name="action_administration">Administration</string>
    <string name="hello_world">Hello world!</string>
    <string name="editAmountString">Enter next amount</string>
    <string name="ShoppingHint">shopping</string>
    <string name="foodButton">food</string>
    <string name="transportButton">transport</string>
    <string name="hotelButton">accommodation</string>
    <string name="shoppingButton">shopping</string>
    <string name="entertainmentButton">entertainment</string>
    <string name="otherButton">other things</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="selectDate">Please select date for the report</string>
    <string name="clearData">Dangerous Area</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pdStartHomeActivity">Loading of All Currencies at first launch</string>
    <string name="WipeDataWarning">Warning: this operation will destroy all data collected in many trips!</string>
    <string name="DestroyData">Destroy All Data</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="UpdateCourses">Update Courses</string>
    <string name="CurrencyAdministration">Update Courses</string>
    <string name="DangerousArea">Dangerous Area</string>
    <string name="AdminDialogTitle">Are you sure?</string>
    <string name="AdminDialogMessage">ALL DATA WILL BE LOST</string>
    <string name="AdminDialogNB">Cancel</string>
    <string name="AdminDialogTitleUpd">Working..</string>
    <string name="AdminDialogMassageUpd">Updating of Currency Courses</string>
    <string name="toastSuccessMessage">Courses loaded successfully</string>
    <string name="toastFailedMessage">Courses loading failed</string>
    <string name="currencyActivityTitle">Select currency for your reports</string>
    <string name="currencyActivityTitleElse">Select currency for your expenses</string>
    <string name="spentOn">spent on</string>
    <string name="GridViewSetText">Click to remove</string>
    <string name="addExpensTitle">Add Expense</string>
    <string name="addExpensPB">Add</string>
    <string name="homeActivityDialogMessage">Today you spent</string>
    <string name="dialogFor">for</string>
    <string name="composeDialogTitleElse">New expense reported</string>
    <string name="myTripDialogNewTitle">New Trips</string>
    <string name="myTripDialogNewMassage">Enter new trips</string>
    <string name="myTripDialodDelTitle">Delete Trip</string>
    <string name="myTripDialodDelMassage">Are you sure you want to delete the trip</string>
    <string name="dialogDelPB">Delete</string>
    <string name="myTripDialogDefaultTitle">Default trip</string>
    <string name="myTripDialogDefaultMassage">Set default trip</string>
    <string name="historyTabFtagmentText">Click to view</string>
    <string name="recordListDialogTitle">Are you sure?</string>
    <string name="recordListDialogMassage">Record to be deleted: </string>
    <string name="statrFragmentToast">Money spent on </string>
    <string name="foodTextButtot">food</string>
    <string name="transportTextButtot">transport</string>
    <string name="shoppingTextButtot">shopping</string>
    <string name="hotelTextButtot">hotel</string>
    <string name="funTextButtot">fun</string>
    <string name="otherTextButtot">other</string>
    <string name="calendarTextButtot">Calendar</string>
    <string name="myTripTextButtot">My trips</string>
    <string name="myTripActivityTextButtot">My trips</string>
    <string name="myTripActivityButtonNew">New Trips</string>
    <string name="myTripActivityButtonHistory">History</string>
    <string name="myTripActivityButtonDefoult">Set As Default</string>
    <string name="myTripActivityButtonDelete">Delete</string>
    <string name="fragmentTabButtonTotal">Totals</string>
    <string name="fragmentTabButtonRecord">Records</string>
    <string name="fragmentTabButtonHistory">History</string>
    <string name="fragmentTabButtonStats">Stats</string>
    <string name="fragmentTabButtonCharts">Charts</string>
    <string name="menu_language">Language</string>
    <string name="menu_home">Home</string>
    <string name="enrestart">English</string>
    <string name="rurestart">Russian</string>
    <string name="LangTitle">Language</string>
    <string name="LangDialogTitle">Choose language:</string>
    <string name="LangSummary">Application language.\nNeed restart application to apply changes.</string>
    <string name="labelSum">Sum</string>
    <string name="labelGroup">Group</string>
    <string name="CurrencyCalculator">Calculator</string>
    <string name="maps">Map</string>
    <string name="Radio_day">Day</string>
    <string name="Radio_week">Week</string>
    <string name="Radio_total">Total</string>
    <string name="Button_prev">Previous</string>
    <string name="Button_next">Next</string>
    <string name="Total_spent">Total spent</string>
    <string name="Total_trips">Total expenses for trip</string>
    <string name="Nothing">Nothing</string>
    <string name="search_hint">Enter the currency to search</string>
    <string name="calendar_massage">Today\'s expenses</string>
    <string name="select_a_date">Select a date</string>
    <string name="recommend">I recommend this place</string>
    <string name="dont_recommend">I don\'t recommend this place</string>
    <string name="dialog_connect_title">Nope internet connection</string>
    <string name="dialog_connect_massage">Check the connection</string>
    <string name="dialog_gps_title">GPS Manager</string>
    <string name="dialog_gps_massage">Would you like to enable GPS?</string>
    <string name="dialog_gps_yes">Yes</string>
    <string name="dialog_gps_no">No</string>
    <string name="recommend_category">Category: </string>
    <string name="recommend_spent">Spent: </string>
    <string name="recommend_name">Name of this place</string>
    <string name="recommend_comment">Comments: (optional)</string>
    <string name="recommend_btn_gps">Get GPS coordinates</string>
    <string name="recommend_btn_map">Place on Map manually</string>
    <string name="recommend_share">Share</string>
    <string name="recommend_save">Save</string>
    <string name="popup_tv">To choose the place on the map, click and hold the point on the map</string>
    <string name="recommend_btn_gps_search">Searching for coordinates</string>
	<string name="map_hint">Hint</string>
	<string name="notif_title">New post in google+</string>
	<string name="dialog_info_label_name">Name</string>
	<string name="dialog_info_label_comment">Comments: </string>
	<string name="btn_info_detal">Detailed</string>
	<string name="dialog_sending_massage">Sending Data</string>
	<string name="dialog_new_comment">New Comment</string>
	<string name="dialog_add_comm_like">Like</string>
	<string name="dialog_add_comm_dislike">DisLike</string>
	<string name="recommend_dialog_maps">Searching for places</string>
	<string name="btn_add_comments">Add Comment</string>
	<string name="enter_name">Enter the name</string>
	<string name="enter_coordinat">Enter coordinate</string>
    

    <string-array name="mChoose">
        <item>Food</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Accommodation</item>
        <item>Entertainment</item>
        <item>Other things</item>
    </string-array>
    <string-array name="mChoose1">
        <item>Other things</item>
        <item>Shopping</item>
        <item>Accommodation</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Food</item>
    </string-array>
    <string-array name="dayss">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wen</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    

</resources>
