<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminActivity" >

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/updateTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CurrencyAdministration"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        

        <Button
            android:id="@+id/updateButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUpdateCoursesClick"
            android:text="@string/UpdateCourses" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DangerousArea"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="16dp" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WipeDataWarning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF3333" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onWipeDataClick"
            android:text="@string/DestroyData"
            android:textColor="#FF3333" />

    </LinearLayout>

</LinearLayout>