<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyTripsActivity" >

    <TextView
        android:id="@+id/updateTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/caldroid_black"
        android:layout_gravity="top"
        android:text="@string/myTripActivityTextButtot"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/LView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/NewTrips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/my_button_selector"
            android:onClick="onNewTripsClick"
            android:text="@string/myTripActivityButtonNew" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/my_button_selector"
            android:onClick="onDeleteClick"
            android:text="@string/myTripActivityButtonDelete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/SetAsDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/my_button_selector"
            android:onClick="onDefaultClick"
            android:text="@string/myTripActivityButtonDefoult" />

        <Button
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/my_button_selector"
            android:onClick="onHistoryClick"
            android:text="@string/myTripActivityButtonHistory" />
    </LinearLayout>

</LinearLayout>