<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RecommendActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/caldroid_black"
                android:text="@string/recommend_category"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cat_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/caldroid_black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_spent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/caldroid_black"
                android:text="@string/recommend_spent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/spent_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/caldroid_black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" >

            <EditText
                android:id="@+id/name_recommend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/caldroid_black"
                android:background="#9919a9ea"
                android:ems="10"
                android:hint="@string/recommend_name" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" >

            <EditText
                android:id="@+id/comments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/caldroid_black"
                android:background="#9919a9ea"
                android:ems="10"
                android:hint="@string/recommend_comment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/my_button_selector"
                    android:src="@drawable/icon_camera_two" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/my_button_selector"
                    android:drawableLeft="@drawable/gps"
                    android:text="@string/recommend_btn_gps" />

                <Button
                    android:id="@+id/btn_maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/my_button_selector"
                    android:drawableLeft="@drawable/map"
                    android:text="@string/recommend_btn_map" />

                <CheckBox
                    android:id="@+id/check_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/caldroid_black"
                    android:text="@string/recommend_share"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <Button
                android:id="@+id/btn_save_recommend"
                android:layout_width="fill_parent"
                android:background="@drawable/my_button_selector"
                android:layout_height="wrap_content"
                android:text="@string/recommend_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>